fix pipeline resource fetch